# MyProjects

./: .gitmodules  README.md
5G- IP Multimedia Subsystem/IMS- Paper/: IMS_Report.aux  IMS_Report.lof  IMS_Report.out  IMS_Report.tex  IMS_Report.toc  abstract_en.aux  abstract_en.tex  abstract_fa.aux  abstract_fa.tex  (+35 more)
Bitsquatting and Bitflips/: README.md
Chandy-Lamport Global Snapshot/: README.md
DarkWeb- Ethics/: README.md
Database - Project and Lab/: README.md
Distributed System- Blockchain/: README.md  TODO.md  blockChain.py  client.py  server.py
FUSE - Linux File System/: CMakeLists.txt  INSTALLATION.txt  README.md  compile-build
FUSE - Linux File System/src/fuse/: CMakeLists.txt  hello.c
FUSE - Linux File System/src/layer0/: CMakeLists.txt  disk_abstraction.c  disk_abstraction.h
FUSE - Linux File System/src/layer1/: CMakeLists.txt  inode_manipulation.c  inode_manipulation.h  inode_test.c  inode_test2.c  inode_test3.c  inode_test4.c
FUSE - Linux File System/src/layer2/: CMakeLists.txt  file_abstraction.c  file_abstraction.h  helloworld3.c
FUSE - Linux File System/src/tests/: CMakeLists.txt  test1.c  test2.c  test3.c
Java- Socket/: Client.java  README.md  ServerThread.java  Students.java  TheServer.java  list.txt  registered.txt
Machine Learning in Networking/: README.md  example.py
NS2- WiFi hidden node/: .test.tcl.swp  README.md  ex6sta.tcl  fil.awk  fil2.awk  fil4.awk  fil6.awk  out2.xgr  out4.xgr  out6.xgr  source.tcl
Othello- AI Player/: MyPlayerAI.java  README.md
RAFT- Distributed Shared Dictionary/: A_Private.pem  A_Public.pem  A_state.txt  B_Private.pem  B_Public.pem  B_state.txt  C_Private.pem  C_Public.pem  C_state.txt  D_Private.pem  D_Public.pem  D_state.txt  E_Private.pem  E_Public.pem  E_state.txt  client.py  encryption.py  test.py
RSA- Secure Socket Communication/: README.md  client.java  server.java
RuntimeSystem-Benchmarking/: Project Information.md  Project Milestone.md  README.md
SDN- QoS by MPLS/: mpls.py
SDN- QoS by ToS tag/: README.md  project.py  pusher.py  quality.py
Stock Trader ACD- Python/: NWebservices.py  README.md  ikco13970820.txt  main.py  token.txt
TSP- Genetic Algorithm/: README.md  TSP.c  eval.c  gen.c  infile  init.c  outfile  random.c  rep.c  select.c  stats.c  type.h
TicTacToe- ATMega32/: README.md
(+160 files in other folders)
